--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Flask==2.3.3
-Flask-SocketIO==5.3.4
+flask-socketio==5.3.4
 python-socketio==5.9.0
 eventlet==0.33.3
+flask-cors==4.0.0
+gunicorn==21.2.0
